# Pypi-Package-Setup

./: README.md  setup.cfg
.github/workflows/: python-publish.yml
diy_pypi/: __init__.py
