[metadata]
name = package-name
version = 0.0.1
author = Your name or GitHub username
author_email = janedoe@gmail.com
description = A short description goes here
long_description = file: README.md
long_description_content_type = text/markdown
keywords = keyword_one, keyword_two
url = https://github.com/your-username/your-repo
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
packages = find
install_requires =
    e.g. selenium
    e.g. requests
