[metadata]
name = diy-pypi
version = 0.0.1
author = Mandy-cyber
description = Just testing this out lol
long_description = file: README.md
long_description_content_type = text/markdown
keywords = sample, python, testing
url = https://github.com/Mandy-cyber/Pypi-Package-Setup
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
packages = find:
